--- a/templates/index.html
+++ b/templates/index.html
@@ -4,46 +4,37 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/styles.css">
-    <title>Document</title>
+    <link rel="stylesheet" href="/static/styles/styles.css">
+    <title>Nav</title>
+    <script src="https://code.iconify.design/iconify-icon/1.0.4/iconify-icon.min.js"></script>
     <script src="https://kit.fontawesome.com/a64a40a2cc.js" crossorigin="anonymous"></script>
 </head>
 <body>
-    <h1>project</h1>
-    <p>Let's do this! Lorem ipsum dolor sit amet consectetur adipisicing elit. Illum, voluptates ullam quasi doloribus quis sequi, quae harum molestiae consequatur natus expedita blanditiis adipisci. Deserunt itaque numquam nostrum error reiciendis iusto.</p>
-    <section class="container">
+    <main>
         <div class="navbar">
-            <i class="fa-light fa-house-chimney" style="color: #ffffff;"></i>
-            <ul class="abc">
-                <li>html</li>
-                <li>css</li>
-                <li>javascript</li>
-                <li>sql</li>
-                <li>python</li>
-                <li>java</li>
-                <li>php</li>
-                <li>bootstrap</li>
-                <li>how to</li>
-                <li>w3.css</li>
-                <li>c</li>
-            </ul>
-            <ul>
-                <i class="fa-sharp fa-solid fa-circle-half-stroke" style="color: #ffffff;"></i>
-                <i class="fa-solid fa-earth-americas" style="color: #ffffff;"></i>
-                <i class="fa-solid fa-magnifying-glass" style="color: #ffffff;"></i>
-            </ul>
-
+            <div class="options">
+                <ul>
+                    <li><a href="#"><iconify-icon icon="material-symbols:home" height="30" style="color: #ffffff;"></iconify-icon></a></li>
+                    <li><a href="#">html</a></li>
+                    <li><a href="#">css</a></li>
+                    <li><a href="#">JAVASCRIPT</a></li>
+                    <li><a href="#">SQL</a></li>
+                    <li><a href="#">PYTHON</a></li>
+                    <li><a href="#">JAVA</a></li>
+                    <li><a href="#">PHP</a></li>
+                    <li><a href="#">BOOTSTRAP</a></li>
+                    <li><a href="#" style="white-space: nowrap;">HOW TO</a></li>
+                    <li><a href="#">C++</a></li>
+                    <li><a href="#">C</a></li>
+                    <li><a href="#">REACT</a></li>
+                    <li><a href="#">JQUERY</a></li>
+                    <li><a href="#"><i class="fa-sharp fa-solid fa-circle-half-stroke" style="color: #ffffff;"></i></a></li>
+                    <li><a href="#"><i class="fa-solid fa-earth-americas" style="color: #ffffff;"></i></a></li>
+                    <li><a href="#"><i class="fa-solid fa-magnifying-glass" style="color: #ffffff;"></i></a></li>
+                </ul>
+            </div>  
         </div>
-    </section>
-    <p>Let's do this! Lorem ipsum dolor sit amet consectetur adipisicing elit. Illum, voluptates ullam quasi doloribus quis sequi, quae harum molestiae consequatur natus expedita blanditiis adipisci. Deserunt itaque numquam nostrum error reiciendis iusto.</p>
-    <p>Let's do this! Lorem ipsum dolor sit amet consectetur adipisicing elit. Illum, voluptates ullam quasi doloribus quis sequi, quae harum molestiae consequatur natus expedita blanditiis adipisci. Deserunt itaque numquam nostrum error reiciendis iusto.</p>
-    <p>Let's do this! Lorem ipsum dolor sit amet consectetur adipisicing elit. Illum, voluptates ullam quasi doloribus quis sequi, quae harum molestiae consequatur natus expedita blanditiis adipisci. Deserunt itaque numquam nostrum error reiciendis iusto.</p>
-    <p>Let's do this! Lorem ipsum dolor sit amet consectetur adipisicing elit. Illum, voluptates ullam quasi doloribus quis sequi, quae harum molestiae consequatur natus expedita blanditiis adipisci. Deserunt itaque numquam nostrum error reiciendis iusto.</p>
-    <p>Let's do this! Lorem ipsum dolor sit amet consectetur adipisicing elit. Illum, voluptates ullam quasi doloribus quis sequi, quae harum molestiae consequatur natus expedita blanditiis adipisci. Deserunt itaque numquam nostrum error reiciendis iusto.</p>
-    <p>Let's do this! Lorem ipsum dolor sit amet consectetur adipisicing elit. Illum, voluptates ullam quasi doloribus quis sequi, quae harum molestiae consequatur natus expedita blanditiis adipisci. Deserunt itaque numquam nostrum error reiciendis iusto.</p>
-    <p>Let's do this! Lorem ipsum dolor sit amet consectetur adipisicing elit. Illum, voluptates ullam quasi doloribus quis sequi, quae harum molestiae consequatur natus expedita blanditiis adipisci. Deserunt itaque numquam nostrum error reiciendis iusto.</p>
-    <p>Let's do this! Lorem ipsum dolor sit amet consectetur adipisicing elit. Illum, voluptates ullam quasi doloribus quis sequi, quae harum molestiae consequatur natus expedita blanditiis adipisci. Deserunt itaque numquam nostrum error reiciendis iusto.</p>
-    <p>Let's do this! Lorem ipsum dolor sit amet consectetur adipisicing elit. Illum, voluptates ullam quasi doloribus quis sequi, quae harum molestiae consequatur natus expedita blanditiis adipisci. Deserunt itaque numquam nostrum error reiciendis iusto.</p>
-
+                    
+    </main>    
 </body>
 </html>
