--- a/static/styles/styles.css
+++ b/static/styles/styles.css
@@ -11,10 +11,15 @@ body {
 }
 .navbar {
     background-color: rgba(7, 14, 12, 0.5);
-    max-width: 100%;
+    height: 50px;
+    width: 100%;
+    padding: 0 10px;
+    display: flex;
+    align-items: center;
 }
 .options ul {
-    display: inline-flex;
+    display: flex;
+    align-items: center;
     list-style: none;
 }
 .options ul li {
@@ -24,6 +29,4 @@ body {
     text-decoration: none;
     display: block;
     text-align: center;
-    padding: 10px 7px;
-    clear: both;
 }
