--- a/templates/index.html
+++ b/templates/index.html
@@ -5,18 +5,18 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/static/styles/styles.css">
-    <title>Nav</title>
+    <title>W3Clone</title>
     <script src="https://code.iconify.design/iconify-icon/1.0.4/iconify-icon.min.js"></script>
     <script src="https://kit.fontawesome.com/a64a40a2cc.js" crossorigin="anonymous"></script>
 </head>
 <body>
     <main>
-        <div class="navbar">
-            <div class="options">
-                <ul>
+        <div>
+            <div class="navbar">
+                <ul class="options">
                     <li><a href="#"><iconify-icon icon="material-symbols:home" height="30" style="color: #ffffff;"></iconify-icon></a></li>
-                    <li><a href="#">html</a></li>
-                    <li><a href="#">css</a></li>
+                    <li><a href="#">HTML</a></li>
+                    <li><a href="#">CSS</a></li>
                     <li><a href="#">JAVASCRIPT</a></li>
                     <li><a href="#">SQL</a></li>
                     <li><a href="#">PYTHON</a></li>
@@ -28,11 +28,92 @@
                     <li><a href="#">C</a></li>
                     <li><a href="#">REACT</a></li>
                     <li><a href="#">JQUERY</a></li>
+                </ul>
+                <ul class="otheroptions">
                     <li><a href="#"><i class="fa-sharp fa-solid fa-circle-half-stroke" style="color: #ffffff;"></i></a></li>
                     <li><a href="#"><i class="fa-solid fa-earth-americas" style="color: #ffffff;"></i></a></li>
                     <li><a href="#"><i class="fa-solid fa-magnifying-glass" style="color: #ffffff;"></i></a></li>
                 </ul>
             </div>  
+        </div>
+        <div>
+            <div>
+                <ul class="sidebar">
+                    <li><a href="#">CSS Tutorial</a></li>
+                    <li><a href="#">CSS HOME</a></li>
+                    <li><a href="#">CSS Introduction</a></li>
+                    <li><a href="#">CSS Syntax</a></li>
+                    <li><a href="#">CSS Selectors</a></li>
+                    <li><a href="#">CSS How To</a></li>
+                    <li><a href="#">CSS Comments</a></li>
+                    <li><a href="#">CSS Colors</a></li>
+                    <li><a href="#">CSS Backgrounds</a></li>
+                    <li><a href="#">CSS Borders</a></li>
+                    <li><a href="#">CSS Margins</a></li>
+                    <li><a href="#">CSS Paddings</a></li>
+                    <li><a href="#">CSS Height/Width</a></li>
+                    <li><a href="#">CSS Box Model</a></li>
+                    <li><a href="#">CSS Outline</a></li>
+                    <li><a href="#">CSS Text</a></li>
+                    <li><a href="#">CSS Fonts</a></li>
+                    <li><a href="#">CSS Icons</a></li>
+                    <li><a href="#">CSS Links</a></li>
+                    <li><a href="#">CSS Tables</a></li>
+                    <li><a href="#">CSS Display</a></li>
+                    <li><a href="#">CSS Max-Width</a></li>
+                    <li><a href="#">CSS Position</a></li>
+                    <li><a href="#">CSS Z-index</a></li>
+                    <li><a href="#">CSS Overflow</a></li>
+                    <li><a href="#">CSS Float</a></li>
+                    <li><a href="#">CSS Inline-block</a></li>
+                    <li><a href="#">CSS Align</a></li>
+                    <li><a href="#">CSS Combinators</a></li>
+                </ul>
+            </div>
+            <div class="maincontent">
+                <div>
+                  <div class="gallery">
+                    <a target="_blank" href="/static/Assets/pexels-ash-376464 (1).jpg">
+                      <img src="/static/Assets/pexels-ash-376464 (1).jpg" alt="pancakeimg" width="500" height="600">
+                    </a>
+                    <div class="desc">Pancakes</div>
+                  </div>
+                  
+                  <div class="gallery">
+                    <a target="_blank" href="/static/Assets/pexels-jan-n-g-u-y-e-n-🍁-2664216.jpg">
+                      <img src="/static/Assets/pexels-jan-n-g-u-y-e-n-🍁-2664216.jpg" alt="pasta" width="500" height="600">
+                    </a>
+                    <div class="desc">Pasta</div>
+                  </div>
+                  
+                  <div class="gallery">
+                    <a target="_blank" href="/static/Assets/pexels-jane-doan-1099680.jpg">
+                      <img src="/static/Assets/pexels-jane-doan-1099680.jpg" alt="smoothie" width="500" height="600">
+                    </a>
+                    <div class="desc">Smoothie</div>
+                  </div>
+                  
+                  <div class="gallery">
+                    <a target="_blank" href="/static/Assets/pexels-tranmautritam-61180.jpg">
+                      <img src="/static/Assets/pexels-tranmautritam-61180.jpg" alt="Mountains" width="500" height="600">
+                    </a>
+                    <div class="desc">Salad</div>
+                  </div>
+                </div>
+                <div>
+                    <form action="/action_page.php">
+                      <label for="fname">First Name</label>
+                      <input type="text" id="fname" name="firstname" placeholder="Your name..">
+                  
+                      <label for="lname">Last Name</label>
+                      <input type="text" id="lname" name="lastname" placeholder="Your last name..">
+                  
+                      <textarea>Give your feedback...</textarea>
+                    
+                      <input type="submit" value="Submit">
+                    </form>
+                </div>                  
+            </div>
         </div>
                     
     </main>    
