--- a/static/styles/styles.css
+++ b/static/styles/styles.css
@@ -4,29 +4,87 @@
     box-sizing: border-box;
 }
 body {
-    background-image: url("/static/Assets/nav.jpg");
+    background-image: url("/static/Assets/pexels-adrien-olichon-2387793.jpg");
     background-size: cover;
     background-repeat: no-repeat;
+    background-position: center;
     background-attachment: fixed;
 }
 .navbar {
     background-color: rgba(7, 14, 12, 0.5);
     height: 50px;
     width: 100%;
-    padding: 0 10px;
     display: flex;
     align-items: center;
+    justify-content: space-between;
 }
-.options ul {
+.options {
     display: flex;
     align-items: center;
     list-style: none;
+    height: 100%;
+} 
+.options li {
+    height: 100%;
+    display: flex;
+    align-items: center;
 }
-.options ul li {
-    float: left;
-}
-.options ul li a {
+.options li a {
     text-decoration: none;
-    display: block;
-    text-align: center;
+    padding: 0 13px;
+    color: #ffffff;
 }
+.options li:hover {
+    background-color: #777;
+}
+.otheroptions {
+    display: flex;
+    float: right;
+    list-style: none;
+}
+.otheroptions li a {
+    padding-left: 50px;
+}
+.sidebar {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+    width: 17%;
+    background-color: #dbdada;
+    position: fixed;
+    height: 100%;
+    overflow: auto;
+}
+.sidebar li a {
+    display: block;
+    color: #000;
+    padding: 8px 16px;
+    text-decoration: none;
+}
+.maincontent {
+    margin-left: 25%;
+    padding: 30px 16px;
+    display: block;
+}
+div.gallery {
+    margin: 5px;
+    border: 1px solid #ccc;
+    float: left;
+    width: 180px;
+    background-color: #ffffff;
+  }
+  
+  div.gallery:hover {
+    border: 1px solid #777;
+    background-color: #777;
+  }
+  
+  div.gallery img {
+    width: 100%;
+    height: auto;
+  }
+  
+  div.desc {
+    padding: 15px;
+    text-align: center;
+  }
