--- a/static/styles/styles.css
+++ b/static/styles/styles.css
@@ -62,16 +62,14 @@ body {
     text-decoration: none;
 }
 .maincontent {
-    margin-left: 25%;
+    margin-left: 30%;
     padding: 30px 16px;
-    display: block;
 }
-div.gallery {
-    margin: 5px;
-    border: 1px solid #ccc;
-    float: left;
-    width: 180px;
-    background-color: #ffffff;
+
+div .gallery {
+    margin: 8px;
+    border: 2px solid #ccc;
+    display: inline-flex;
   }
   
   div.gallery:hover {
@@ -80,11 +78,54 @@ div.gallery {
   }
   
   div.gallery img {
-    width: 100%;
-    height: auto;
+    height: 200px;
+    width: 160px;
   }
   
-  div.desc {
-    padding: 15px;
-    text-align: center;
-  }
+.data {
+    margin: 50px;
+    background-color: rgba(100, 105, 103, 0.4);
+    color: #ffffff;
+    width: 70%;
+    height: 300px;
+}
+form {
+    padding: 20px;
+}
+input {
+    width: 100%;
+    height: 30px;
+    background-color: rgba(0, 0, 0, 0.7);
+    border-width: 0;
+    margin: 3px 0;
+    padding-left: 3px;
+    border-radius: 2px;
+}
+textarea {
+    margin: 10px 0;
+    height: 100px;
+    width: 80%;
+    background-color: rgba(100, 105, 103, 0.8);
+    color: #ffffff;
+    padding: 5px;
+}
+/* .drop {
+    position: relative;
+    display: inline-block;
+}
+.dropdown {
+    display: none;
+    position: absolute;
+    background-color: #000;
+    min-width: 120px;
+    box-shadow: 0px 8px 16px 0px rgba(100, 105, 103, 0.8);
+    z-index: -1;
+} 
+.dropdown label {
+    color: #ffffff;
+    padding: 10px 14px;
+    display: block;
+}
+.dropdown label:hover {
+    background-color: rgba(100, 105, 103, 0.4);
+} */
