--- a/templates/index.html
+++ b/templates/index.html
@@ -30,20 +30,26 @@
                     <li><a href="#">JQUERY</a></li>
                 </ul>
                 <ul class="otheroptions">
-                    <li class="drop"><a href="#"><i class="fa-sharp fa-solid fa-circle-half-stroke" style="color: #ffffff;"></i></a>
-                      <!-- <div class="dropdown">
-                        <label class="dropbox">
-                          <input type="checkbox" checked="checked">
-                          Dark Mode
-                        </label>
-                        <label class="dropbox">
-                          <input type="checkbox" checked="checked">
-                          Light Mode
-                        </label>
-                      </div> -->
+                    <li class="dropdown">
+                            <a href="#" id="dropbtn"><i class="fa-sharp fa-solid fa-circle-half-stroke" style="color: #ffffff;"></i></a>
+                            <div class="dropdown-content">
+                                <div class="color-mode">
+                                    <input type="checkbox" name="example" value="1">
+                                    <label>Dark mode</label>
+                                </div>
+                                <div class="color-mode">
+                                    <input type="checkbox" name="example" value="2">
+                                    <label>Dark code </label>
+                                </div>
+                            </div>
                     </li>
                     <li><a href="#"><i class="fa-solid fa-earth-americas" style="color: #ffffff;"></i></a></li>
-                    <li><a href="#"><i class="fa-solid fa-magnifying-glass" style="color: #ffffff;"></i></a></li>
+                    <li>
+                        <a class="search-icon"> <i class="fa-solid fa-magnifying-glass" style="color: #ffffff;"></i></a>
+                        <form>
+                            <input type="text" placeholder="Search W3Clone" name="search">
+                        </form>
+                    </li>
                 </ul>
             </div>  
         </div>
@@ -67,7 +73,7 @@
                     <li><a href="#">CSS Outline</a></li>
                     <li><a href="#">CSS Text</a></li>
                     <li><a href="#">CSS Fonts</a></li>
-                    <li><a href="#">CSS Icons</a></li>
+                   <li><a href="#">CSS Icons</a></li>
                     <li><a href="#">CSS Links</a></li>
                     <li><a href="#">CSS Tables</a></li>
                     <li><a href="#">CSS Display</a></li>
@@ -110,14 +116,14 @@
                 <div class="data">
                     <form action="/action_page.php">
                       <label for="fname">First Name</label><br />
-                      <input type="text" id="fname" name="firstname" placeholder="Your name.."><br />
+                      <input type="email" id="fname" name="firstname" placeholder="Your name.."><br />
                   
                       <label for="lname">Last Name</label><br>
-                      <input type="text" id="lname" name="lastname" placeholder="Your last name.."><br />
+                      <input type="email" id="lname" name="lastname" placeholder="Your last name.."><br />
                   
                       <textarea>Give your feedback...</textarea><br />
                     
-                      <input type="submit" value="Submit" style="color: #ffffff; width: 50%; background-color: black;">
+                      <button type="button" class="submit-btn">Submit</button>
                     </form>
                 </div>                  
             </div>
