--- a/static/styles/styles.css
+++ b/static/styles/styles.css
@@ -64,12 +64,14 @@ body {
 .maincontent {
     margin-left: 30%;
     padding: 30px 16px;
+    /*box-shadow: 0 4px 8px 0 rgba(255, 255, 255, 0.7), 0 6px 20px 0 rgba(255, 255, 255, 0.7);*/
 }
 
 div .gallery {
     margin: 8px;
     border: 2px solid #ccc;
     display: inline-flex;
+   /*box-shadow: 0 4px 8px 0 rgba(255, 255, 255, 0.7), 0 6px 20px 0 rgba(255, 255, 255, 0.7);*/
   }
   
   div.gallery:hover {
@@ -80,14 +82,17 @@ div .gallery {
   div.gallery img {
     height: 200px;
     width: 160px;
+    background-size: contain;
   }
   
 .data {
     margin: 50px;
     background-color: rgba(100, 105, 103, 0.4);
+    border-radius: 10px; /* 5px rounded corners */
     color: #ffffff;
     width: 70%;
-    height: 300px;
+    height: 400px;
+    box-shadow: 0px 8px 16px 0px rgba(255, 255, 255, 1);
 }
 form {
     padding: 20px;
@@ -97,18 +102,144 @@ input {
     height: 30px;
     background-color: rgba(0, 0, 0, 0.7);
     border-width: 0;
+    color: #ffffff;
     margin: 3px 0;
     padding-left: 3px;
     border-radius: 2px;
 }
 textarea {
     margin: 10px 0;
-    height: 100px;
+    height: 200px;
     width: 80%;
     background-color: rgba(100, 105, 103, 0.8);
     color: #ffffff;
     padding: 5px;
 }
+.submit-btn {
+    width: 30%;
+    height: 30px;
+    background-color: rgba(0, 0, 255, 0.7);
+    border-width: 0;
+    margin: 3px 0;
+    padding-left: 3px;
+    border-radius: 5px;
+    color: #ffffff;
+}
+.submit-btn:hover {
+    background-color: rgba(0, 128, 0, 0.8);
+    border: 2px solid #39FF14;
+}
+
+.dropdown {
+  position: relative;
+  display: inline-block;
+}
+.dropdown-content {
+  display: none;
+  position: absolute;
+  justify-content: center;
+  align-items: center;
+  background-color: #000000;
+  min-width: 160px;
+  border-radius: 5px;
+  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+  z-index: 1;
+}
+.dropdown-content a:hover {background-color: #f1f1f1}
+
+.dropdown:hover .dropdown-content {
+  display: block;
+}
+#dropbtn {
+    margin: 10px;
+    margin-top: 10px;
+    padding: 8px 16px;
+    display: block;
+
+}
+.dropdown:hover #dropbtn {
+  background-color: transparent;
+}
+input[type="checkbox"]:checked {
+  color: blue;
+}
+.color-mode input[type="checkbox"] {
+    display: flex;
+    float: left;
+    margin-left: 10px;
+    margin-top: 5px;
+    width: 20px;
+    height: 20px;
+    background-color: #000;
+    border-radius: 5px;
+    border: 2px solid #fff;
+    cursor: pointer;
+}
+
+.color-mode {
+    display: flex;
+    align-items: center;
+    }
+.color-mode label {;
+    white-space: nowrap;
+    margin-left: 10px;
+    color: #ffffff;
+    font-size: 15px;
+    font-weight: bold;
+
+}
+
+.color-mode:hover {
+    background-color: rgba(100, 105, 103, 0.4);
+    cursor: pointer;
+}
+
+
+.hidden-search-input {
+    display: none;
+    width: 300px;
+    height: auto;
+    color: #000;
+    position: absolute;
+    margin-right: 5px;
+
+}
+
+/*.search-icon:active + .hidden-search-input:hover {
+    display: block;
+    max-width: 100%;
+    transform: translateX(-80%);
+    transition: transform 5s ease-in-out;
+} */
+input[name="search"]{
+    box-sizing: border-box;
+    max-width: 100%;
+    height: 40px;
+    border-radius: 5px;
+    border: 2px solid rgba(0, 255, 0, 0.4);
+    background-color: #fff;
+    color: #000;
+    padding:10px 5px 10px 5px;
+    font-size: 15px;
+}
+
+/*input[name="search"]:focus {
+    outline: none;
+    border: 2px solid #ffffff;
+    background-color: rgba(100, 105, 103, 0.4);
+} */
+
+
+    
+    /*display: block;
+    box-sizing: border-box;
+    border: 2px solid #ccc;
+    border-radius: 4px;
+    font-size: 16px;
+    background-color: white;
+    padding: 12px 20px 12px 40px;
+    transition: width 0.4s ease-in-out; */
+
 /* .drop {
     position: relative;
     display: inline-block;
