--- a/static/styles/styles.css
+++ b/static/styles/styles.css
@@ -205,22 +205,20 @@ input[type="checkbox"]:checked {
 
 }
 
-/*.search-icon:active + .hidden-search-input:hover {
-    display: block;
-    max-width: 100%;
-    transform: translateX(-80%);
-    transition: transform 5s ease-in-out;
-} */
+.search-icon:hover {
+    cursor: pointer;
+}
 input[name="search"]{
     box-sizing: border-box;
     max-width: 100%;
     height: 40px;
     border-radius: 5px;
-    border: 2px solid rgba(0, 255, 0, 0.4);
+    border: 5px solid rgba(0, 255, 0, 0.4);
     background-color: #fff;
     color: #000;
     padding:10px 5px 10px 5px;
     font-size: 15px;
+    margin-bottom: 10px;
 }
 
 /*input[name="search"]:focus {
