--- a/static/styles/styles.css
+++ b/static/styles/styles.css
@@ -37,14 +37,62 @@ body {
 .options li:hover {
     background-color: #777;
 }
-.otheroptions {
+.behave {
     display: flex;
-    float: right;
-    list-style: none;
 }
-.otheroptions li a {
-    padding-left: 50px;
+.dropdown {
+    position: relative;
+    display: inline-block;
+    padding-right: 25px;
 }
+.dropdown-content {
+    display: none;
+    position: absolute;
+    background-color: #777;
+    min-width: 140px;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.5);
+    padding: 12px 16px;
+    border-radius: 6px;
+    z-index: 1;
+}
+.dropdown-content a {
+    color: #000;
+    padding: 12px 16px;
+    text-decoration: none;
+    display: block;
+}
+.dropdown:hover .dropdown-content {
+    display: block;
+}
+
+.tooltip {
+    position: relative;
+    display: inline-block;
+    padding-right: 25px;
+  }
+  
+  .tooltip .tooltiptext {
+    visibility: hidden;
+    width: 150px;
+    font-size: 15px;
+    background-color: #777;
+    color: #000;
+    text-align: center;
+    padding: 5px 0;
+    position: absolute;
+    z-index: 1;
+    top: 100%;
+    left: 50%;
+    margin-left: -60px;
+  }
+  
+  .tooltip:hover .tooltiptext {
+    visibility: visible;
+  }
+  .searchbar {
+    padding-right: 0;
+  }
+
 .sidebar {
     list-style-type: none;
     margin: 0;
@@ -61,71 +109,73 @@ body {
     padding: 8px 16px;
     text-decoration: none;
 }
+/* Advert Section */
 .maincontent {
-    margin-left: 30%;
-    padding: 30px 16px;
+    position: relative;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    background-color: #ffffff;
+    width: 700px;
+    height: 90px;
+    border: 1px solid #777;
+    margin-right: auto;
+    margin-left: auto;
+    margin-top: 15px;
 }
 
-div .gallery {
-    margin: 8px;
-    border: 2px solid #ccc;
-    display: inline-flex;
-  }
-  
-  div.gallery:hover {
-    border: 1px solid #777;
-    background-color: #777;
-  }
-  
-  div.gallery img {
-    height: 200px;
-    width: 160px;
-  }
-  
-.data {
-    margin: 50px;
-    background-color: rgba(100, 105, 103, 0.4);
-    color: #ffffff;
-    width: 70%;
-    height: 300px;
-}
-form {
-    padding: 20px;
-}
-input {
-    width: 100%;
-    height: 30px;
-    background-color: rgba(0, 0, 0, 0.7);
-    border-width: 0;
-    margin: 3px 0;
-    padding-left: 3px;
-    border-radius: 2px;
-}
-textarea {
-    margin: 10px 0;
-    height: 100px;
-    width: 80%;
-    background-color: rgba(100, 105, 103, 0.8);
-    color: #ffffff;
-    padding: 5px;
-}
-/* .drop {
-    position: relative;
-    display: inline-block;
-}
-.dropdown {
-    display: none;
+.adicon {
+    display: grid;
     position: absolute;
-    background-color: #000;
-    min-width: 120px;
-    box-shadow: 0px 8px 16px 0px rgba(100, 105, 103, 0.8);
-    z-index: -1;
-} 
-.dropdown label {
-    color: #ffffff;
-    padding: 10px 14px;
-    display: block;
+    bottom: 0;
+    background-color: #777;
 }
-.dropdown label:hover {
-    background-color: rgba(100, 105, 103, 0.4);
-} */
+.adtext {
+    display: block;
+    margin-left: 20px;
+    color: #1c1b1b;
+}
+.adtext:hover {
+    color: rgba(48, 48, 48, 0.5);
+}
+.adbig {
+    font-weight: bold;
+    font-size: 30px;
+}
+button {
+    margin: 20px;
+    height: 40px;
+    width: 200px;
+    background-color: #418bf9;
+    color: #ffffff;
+    font-size: 22px;
+    border: none;
+    border-radius: 3px;
+}
+button:hover {
+    background-color: rgba(77, 121, 241, 0.7);
+}
+img {
+    width: 700px;
+    height: 90px;
+}
+.adicon2 {
+    position: absolute;
+    top: 0;
+}
+.second {
+    position: relative;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    background-color: #ffffff;
+    color: rgb(226, 110, 110);
+    width: 700px;
+    height: 90px;
+    border: 1px solid #777;
+    margin-right: auto;
+    margin-left: auto;
+}
+.adtext2 {
+    margin-left: 20px;
+}
