--- a/templates/index.html
+++ b/templates/index.html
@@ -8,10 +8,9 @@
     <title>W3Clone</title>
     <script src="https://code.iconify.design/iconify-icon/1.0.4/iconify-icon.min.js"></script>
     <script src="https://kit.fontawesome.com/a64a40a2cc.js" crossorigin="anonymous"></script>
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 </head>
 <body>
-    <main class="main-section">
+    <main>
         <div>
             <div class="navbar">
                 <ul class="options">
@@ -30,7 +29,6 @@
                     <li><a href="#">REACT</a></li>
                     <li><a href="#">JQUERY</a></li>
                 </ul>
-<<<<<<< HEAD
                 <div class="behave">
                   <div class="dropdown">
                     <span><i class="fa-sharp fa-solid fa-circle-half-stroke" style="color: #ffffff;"></i></span>
@@ -48,32 +46,6 @@
                     <span><i class="fa-solid fa-magnifying-glass" style="color: #ffffff;"></i></span>
                   </div>
                 </div>
-=======
-                <ul class="otheroptions">
-                    <li class="dropdown">
-                            <a href="#" id="dropbtn"><i class="fa-sharp fa-solid fa-circle-half-stroke" style="color: #ffffff;"></i></a>
-                            <div class="dropdown-content">
-                                <div class="color-mode">
-                                    <input type="checkbox" name="example" value="1">
-                                    <label>Dark mode</label>
-                                </div>
-                                <div class="color-mode">
-                                    <input type="checkbox" name="example" value="2">
-                                    <label>Dark code </label>
-                                </div>
-                            </div>
-                    </li>
-                    <li><a href="#" id="dropbtn"><i class="fa-solid fa-earth-americas" style="color: #ffffff;"></i></a></li>
-                    <li>
-                        <a class="search-icon" id="dropbtn"> <i class="fa-solid fa-magnifying-glass" style="color: #ffffff;"></i></a>
-                        <div class="hidden-search-input">
-                            <form>
-                                <input type="text" placeholder="Search W3Clone" name="search">
-                            </form>
-                        </div>
-                    </li>
-                </ul>
->>>>>>> 79f73dc85f3b66f8f9f7311914c1b3a7ee371983
             </div>  
         </div>
         <div>
@@ -96,7 +68,7 @@
                     <li><a href="#">CSS Outline</a></li>
                     <li><a href="#">CSS Text</a></li>
                     <li><a href="#">CSS Fonts</a></li>
-                   <li><a href="#">CSS Icons</a></li>
+                    <li><a href="#">CSS Icons</a></li>
                     <li><a href="#">CSS Links</a></li>
                     <li><a href="#">CSS Tables</a></li>
                     <li><a href="#">CSS Display</a></li>
@@ -112,45 +84,33 @@
             </div>
             <!-- Advertisement -->
             <section>
-              <div class="maincontent">
-                <div class="adicon">
-                  <i class="fa-regular fa-circle-info" style="color: #5bc1c2;"></i>
-                  <i class="fa-sharp fa-solid fa-xmark" style="color: #5bc1c2;"></i>
+              <div class="house">
+                <div class="maincontent">
+                  <div class="adicon">
+                    <i class="fa-regular fa-circle-info" style="color: #5bc1c2;"></i>
+                    <i class="fa-sharp fa-solid fa-xmark" style="color: #5bc1c2;"></i>
+                  </div>
+                  <p class="adtext">Microsoft<br /><span class="adbig">Add the extension</span></p>
+                  <button>Install</button>                
                 </div>
-<<<<<<< HEAD
-                <p class="adtext">Microsoft<br /><span class="adbig">Add the extension</span></p>
-                <button>Install</button>                
-              </div>
-              <div class="second">
-                <span class="adtext2">CERELAC junior is rich in vitamins and minerals for your kids after 3 years old</span>
-                <button style="background-color: rgb(226, 110, 110);">Buy Now</button>
-                <img src="/static/Assets/pexels-tranmautritam-61180.jpg">
-                <div class="adicon2">
-                  <i class="fa-regular fa-circle-info" style="color: #5bc1c2;"></i>
+                <div class="move">
+                  <div class="second">
+                    <span class="adtext2">CERELAC junior is rich in vitamins and minerals for your kids after 3 years old</span>
+                    <button style="background-color: rgb(226, 110, 110);">Buy Now</button>
+                    <img src="/static/Assets/pexels-tranmautritam-61180.jpg">
+                    <div class="adicon2">
+                      <i class="fa-regular fa-circle-info" style="color: #5bc1c2;"></i>
+                    </div>
+                  </div>
                 </div>
+                
               </div>
+              
             </section>
-=======
-                <div class="data">
-                    <form action="/action_page.php">
-                      <label for="fname">First Name</label><br />
-                      <input type="email" id="fname" name="firstname" placeholder="Your name.."><br />
-                  
-                      <label for="lname">Last Name</label><br>
-                      <input type="email" id="lname" name="lastname" placeholder="Your last name.."><br />
-                  
-                      <textarea>Give your feedback...</textarea><br />
-                    
-                      <button type="button" class="submit-btn">Submit</button>
-                    </form>
-                </div>                  
-            </div>
->>>>>>> 79f73dc85f3b66f8f9f7311914c1b3a7ee371983
         </div>
 
         
                     
-    </main>
-<script src="/static/scripts/script.js"></script>
+    </main>    
 </body>
 </html>
