--- a/static/styles/styles.css
+++ b/static/styles/styles.css
@@ -17,6 +17,7 @@ body {
     display: flex;
     align-items: center;
     justify-content: space-between;
+    border: 1px solid #777;
 }
 .options {
     display: flex;
@@ -37,23 +38,15 @@ body {
 .options li:hover {
     background-color: #777;
 }
-.behave {
+
+.options li:nth-child(3) {
+    background-color: rgba(0,255,0,0.5);
+}
+/*.behave {
     display: flex;
-}
-.dropdown {
-    position: relative;
-    display: inline-block;
-    padding-right: 25px;
-}
-.dropdown-content {
-    display: none;
-    position: absolute;
-    background-color: #777;
-    min-width: 140px;
-    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.5);
-    padding: 12px 16px;
-    border-radius: 6px;
-    z-index: 1;
+}*/
+.search-icon:hover {
+    cursor: pointer;
 }
 .dropdown-content a {
     color: #000;
@@ -61,22 +54,19 @@ body {
     text-decoration: none;
     display: block;
 }
-.dropdown:hover .dropdown-content {
-    display: block;
-}
 
 .tooltip {
     position: relative;
     display: inline-block;
-    padding-right: 25px;
   }
   
   .tooltip .tooltiptext {
     visibility: hidden;
-    width: 150px;
+    width: 120px;
     font-size: 15px;
     background-color: #777;
-    color: #000;
+    color: #fff;
+    white-space: nowrap;
     text-align: center;
     padding: 5px 0;
     position: absolute;
@@ -84,13 +74,10 @@ body {
     top: 100%;
     left: 50%;
     margin-left: -60px;
-  }
+  } 
   
   .tooltip:hover .tooltiptext {
     visibility: visible;
-  }
-  .searchbar {
-    padding-right: 0;
   }
 
 .sidebar {
@@ -108,6 +95,15 @@ body {
     color: #000;
     padding: 8px 16px;
     text-decoration: none;
+}
+.sidebar li a:hover {
+    background-color: #777;
+    color: white;
+}
+
+.sidebar li:nth-child(2) {
+    background-color: rgba(0,110,0,0.7);
+    color: #fff;
 }
 /* Advert Section */
 .maincontent {
@@ -195,4 +191,124 @@ img {
 @keyframes wrap {
     50% {visibility: visible;}
     100% {display: none;}
+}
+
+/* new style implementTion */
+.submit-btn {
+    width: 30%;
+    height: 30px;
+    background-color: rgba(0, 0, 255, 0.7);
+    border-width: 0;
+    margin: 3px 0;
+    padding-left: 3px;
+    border-radius: 5px;
+    color: #ffffff;
+}
+.submit-btn:hover {
+    background-color: rgba(0, 128, 0, 0.8);
+    border: 2px solid #39FF14;
+}
+
+.dropdown {
+  position: relative;
+  display: inline-block;
+}
+.dropdown-content {
+  display: none;
+  position: absolute;
+  justify-content: center;
+  align-items: center;
+  background-color: #000000;
+  min-width: 160px;
+  border-radius: 5px;
+  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+  z-index: 1;
+}
+.dropdown-content a:hover {background-color: #f1f1f1}
+
+.dropdown:hover .dropdown-content {
+  display: block;
+}
+#dropbtn {
+    margin: 10px;
+    margin-top: 10px;
+    padding: 8px 16px;
+    display: block;
+
+}
+.dropdown:hover #dropbtn {
+  background-color: transparent;
+}
+input[type="checkbox"]:checked {
+  color: blue;
+}
+.color-mode input[type="checkbox"] {
+    display: flex;
+    float: left;
+    margin-left: 10px;
+    margin-top: 5px;
+    width: 20px;
+    height: 20px;
+    background-color: #000;
+    border-radius: 5px;
+    cursor: pointer;
+}
+
+.color-mode {
+    display: flex;
+    align-items: center;
+    }
+.color-mode label {;
+    white-space: nowrap;
+    margin-left: 10px;
+    color: #ffffff;
+    font-size: 15px;
+    font-weight: bold;
+
+}
+
+.color-mode:hover {
+    background-color: rgba(100, 105, 103, 0.4);
+    cursor: pointer;
+}
+
+
+.hidden-search-input {
+    display: none;
+    width: 300px;
+    height: auto;
+    color: #000;
+    position: absolute;
+    margin-right: 10px;
+
+}
+
+/*.search-icon:active + .hidden-search-input:hover {
+    display: block;
+    max-width: 100%;
+    transform: translateX(-80%);
+    transition: transform 5s ease-in-out;
+} */
+input[name="search"] {
+    box-sizing: border-box;
+    box-shadow: 0 5px 7px 5px rgba(248, 0, 1, 0.5);
+    display: block;
+    width: 270px;
+    height: 40px;
+    border-radius: 3px;
+    border: 1px solid rgba(0, 255, 0, 0.4);
+    background-color: #fff;
+    color: #000;
+    margin-left: 3px;
+    margin-right: 5px;
+    padding:10px 5px 10px 5px;
+    font-size: 15px;
+}
+
+.otheroptions {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin-top: 10px;
+    margin-bottom: 10px;
 }
